@@ -14,7 +14,7 @@ libfuse_la_SOURCES = 		\
 	helper.c		\
 	mount.c
 
-libfuse_la_LDFLAGS = -lpthread -version-number 2:4:0 \
+libfuse_la_LDFLAGS = -lpthread -version-number 2:4:1 \
 	-Wl,--version-script,fuse_versionscript
 
 EXTRA_DIST = fuse_versionscript
