@@ -1,3 +1,8 @@
+2005-10-14  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: add debug for write result and warnings for too large
+	read/write result.
+
 2005-10-11  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Spelling fixes, thanks to Ioannis Barkas
